--- a/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos/MineriaDatos.html
+++ b/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos/MineriaDatos.html
@@ -26,11 +26,11 @@
         </ul>
     </div>
     <div class="col-md-4">
-        <h1>Información de interés</h1>
-        <ul><li><a href="{% url 'comandosPython' %}">comandosPython</a></li></ul>
-        <ul><li><a href="{% url 'Datasets' %}">Datasets</a></li></ul>
+        <h1><a href="{% url 'comandosPython' %}">comandosPython</a></h1>
     </div>
-    
+    <div class="col-md-4">
+        <h1><a href="{% url 'Datasets' %}">Datasets</a></h1>
+    </div>
     <div class="col-md-4">
         <h1>Ejercicios Propuestos</h1>
         <ul>
