Mejorada pagina de preprocesamiento de datos

--- a/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos/ObtencionDatos/ObtencionDatos.html
+++ b/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos/ObtencionDatos/ObtencionDatos.html
@@ -23,10 +23,10 @@
         <h2>Tutoriales</h2>
         <ul>
             <li>
-                <a href="">Obtencion Datos</a>
+                <a href="">Lectura Dataset</a>
             </li>
             <li>
-                <a href="">Analisis Datos</a>
+                <a href="">Conocer Dataset</a>
             </li>
         </ul>
     </div>
