--- a/TTFProyectDjango/TTFProyectDjango/app/templates/app/plantillaBase.html
+++ b/TTFProyectDjango/TTFProyectDjango/app/templates/app/plantillaBase.html
@@ -27,7 +27,7 @@
                 <li><a class="navbar-brand">Mineria de Datos</a>
                     <ul>
                         <li><a href="{% url 'MineriaDatos' %}">Pagina Principal</a></li>
-                        <li><a href="{% url 'comandosPython' %}">comandosPython</a></li>
+                        <li><a href="{% url 'comandosPython' %}">SimuladorPython</a></li>
                         <li><a href="{% url 'Datasets' %}">Datasets</a></li>
                     </ul>   
                 </li>
