--- a/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos/PreprocesamientoDatos/PreprocesamientoDatos.html
+++ b/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos/PreprocesamientoDatos/PreprocesamientoDatos.html
@@ -6,9 +6,13 @@
 <h3>{{ message }}</h3>
 
 <div class="jumbotron">
-    <h1>Limpieza de datos</h1>
+    <h1>Preprocesamiento de Datos</h1>
     <p class="lead">
-        La limpieza de datos es un proceso que involucra detectar, eliminar, corregir o transformar cualquier anomalía, perturbación o irrelevancia de los datos.
+        El Preprocesamiento de Datos consiste en un conjunto de técnicas utilizadas para preparar los datos para su uso en un sistema IA.
+    </p>
+    <p>
+        <a href="https://blog.powerdata.es/el-valor-de-la-gestion-de-datos/preprocesar-y-normalizar-datos-4-pasos-para-limpiar-y-mejorar-datos"
+           class="btn btn-primary btn-large">Aprender más&raquo;</a>
     </p>
 </div>
 
@@ -16,6 +20,7 @@
     <div class="col-md">
         <h1>Informacion de Interes</h1>
         <ul>
+            <li><a href="https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.interpolate.html">Interpolación</a></li>
             <li><a href="{% url 'DatosNulos' %}">Datos nulos o perdidos</a></li>
             <li><a href="{% url 'SeleccionDatosInteres' %}">Seleccion datos de interes</a></li>
             <li><a href="{% url 'Outliers' %}">Outliers</a></li>
@@ -25,7 +30,8 @@
         <h2>Tutoriales</h2>
         <ul>
             <li>
-                <a href="">LimpiezaDatos + TransformacionDatos</a>
+                <a href="">LimpiezaDatos</a>
+                <a href="">TransformacionDatos</a>
             </li>
             
         </ul>
