Filtro tecnologias - Python

--- a/TTFProyectDjango/TTFProyectDjango/app/templates/app/index.html
+++ b/TTFProyectDjango/TTFProyectDjango/app/templates/app/index.html
@@ -9,23 +9,28 @@
     </div>
 {% endblock %}
 
+<!--Add a block content-->
 {% block content %}
 
-<div id="Descripcion" style="display: none; ">
-    <h1  style="font-family: 'Lobster'; cursive">NETTLAERER</h1>
+<!--Description Aplicacion Web-->
+<div id="Descripcion" style="display:none; text-align:center">
+    <h1  style="font-family: 'Lobster';"><em>NETTLAERER</em></h1>
     NETTLAERER es una aplicación web sin fines de lucro creada por Jaime Lorenzo Sánchez en 2023.
     Se diseñó con el objetivo de ayudar a los programadores a dar sus primeros pasos en la minería de datos.
     El sitio web incluye ejercicios y materiales de práctica complementarios. Los recursos o materiales de aprendizaje disponibles son gratuitos para los usuarios de su sitio web y aplicación.
 </div>
 
-<div id="datosContacto" style="display:none;">
-    <h1 style="font-family: 'Lobster'; cursive ">Datos de contacto</h1>
+<!--Datos de contacto-->
+<div id="datosContacto" style="display:none; text-align:center">
+    <h1 style="font-family: 'Lobster'; "><em>Datos de Contacto</em></h1>
     <p>Email: jlorenzosa@gmail.com</p>
 </div>
-<div id="requisitosSistema" style="display:none;">
-    <h1 style="font-family: 'Lobster'; cursive ">Requisitos del sistema</h1>
-     <p>Python 3.10.11</p>
-     <p>Django 4.2</p>
+
+<!--Requisitos del sistema-->
+<div id="requisitosSistema" style="display:none; text-align:center">
+    <h1 style="font-family: 'Lobster' "><em>Requisitos del sistema</em></h1>
+     <p>Python: 3.10.11</p>
+     <p>Django: 4.2</p>
 </div>
 
 
