--- a/TTFProyectDjango/TTFProyectDjango/app/templates/app/plantillaBase.html
+++ b/TTFProyectDjango/TTFProyectDjango/app/templates/app/plantillaBase.html
@@ -35,17 +35,14 @@
 <body>
     <!--Add a navbar header-->
     <div id="header" style="padding-left: 15px; ">
-<<<<<<< HEAD
-        <nav class="navbar navbar-expand-lg navbar-light">
-=======
+
         <nav class="navbar navbar-expand-lg navbar-light ">
->>>>>>> main
+
             <ul class="nav">
                 <li><a href="/" class="navbar-brand">NETTLAERER</a></li>
                 <li>
-                    <a class="navbar-brand">TECNOLOGIAS</a>
+                    <a href="{% url 'tecnologias' %}" class="navbar-brand">TECNOLOGIAS</a>
                     <ul>
-                        <li><a href="{% url 'Python' %}">Python</a></li>
                         <li><a href="{% url 'Django' %}">DJANGO</a></li>
                         <li><a href="{% url 'html' %}">HTML</a></li>
                         <li><a href="{% url 'JavaScript' %}">JAVASCRIPT</a></li>
