--- a/TTFProyectDjango/TTFProyectDjango/app/templates/app/plantillaBase.html
+++ b/TTFProyectDjango/TTFProyectDjango/app/templates/app/plantillaBase.html
@@ -10,11 +10,6 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
           integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="https://pyscript.net/latest/pyscript.css" />
-
-
-    <script defer src="https://pyscript.net/latest/pyscript.js"></script>
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
@@ -32,16 +27,16 @@
     <link href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
 
 </head>
-<body>
+<body style="background-color:black">
     <!--Add a navbar header-->
-    <div id="header" style="padding-left: 15px; ">
-
+    <div id="header" style="padding-left: 50px; margin-top:50px">
+        <h1 style="font-family: 'Lobster'; color:white"><em>Menu Principal</em></h1>
         <nav class="navbar navbar-expand-lg navbar-light ">
 
             <ul class="nav">
-                <li><a href="/" class="navbar-brand">NETTLAERER</a></li>
+                <li><a href="/" class="navbar-brand" style="color:white">NETTLAERER</a></li>
                 <li>
-                    <a href="{% url 'tecnologias' %}" class="navbar-brand">TECNOLOGIAS</a>
+                    <a href="{% url 'tecnologias' %}" class="navbar-brand" style="color:white">TECNOLOGIAS</a>
                     <ul>
                         <li><a href="{% url 'Django' %}">DJANGO</a></li>
                         <li><a href="{% url 'html' %}">HTML</a></li>
@@ -50,24 +45,22 @@
                         <li><a href="{% url 'Bash' %}">Bash</a></li>
                     </ul>
                 </li>
-                <li><a href="{% url 'MineriaDatos' %}" class="navbar-brand">Mineria de Datos</a></li>
-                    <ul>
-                        <li><a href="{% url 'Datasets' %}">Datasets</a></li>
-                    </ul>
+                <li><a href="{% url 'MineriaDatos' %}" class="navbar-brand" style="color:white">Mineria de Datos</a></li>
                 
-                <li><a href="{% url 'comandosPython' %}" class="navbar-brand">SimuladorPython</a></li>
+                <li><a href="{% url 'simuladorPython' %}" class="navbar-brand" style="color:white" target="_blank">SimuladorPython</a></li>
             </ul>
         </nav>
     </div>
 
     <!--Add a fluid container-->
-    <div class="container-fluid">
+    <div class="container-fluid" >
         <div class="row">
-            <div class="col-sm-2">
+            <div class="col-sm-2" style="padding-left: 50px;padding-right:50px">
                 <!--Add a filter menu-->
-                {% block siderbar %}{% endblock %}
+                <h2 style="font-family: 'Lobster'; color:white"><em>Filtro de página</em></h2>
+                {% block siderbar %}  {% endblock %}
             </div>
-            <div class="col-sm-10">
+            <div class="col-sm-10" style="padding:50px">
                 {% block content %}{% endblock %}
             </div>
         </div>
